--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,8 @@
     <uses-permission android:name="android.permission.CAMERA" />
 
     <uses-feature android:name="android.hardware.camera" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -17,7 +18,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Scanocular"
         tools:targetApi="31">
-
+        <activity
+            android:name=".activity.scan.ScanResultActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="false" />
