--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.CAMERA" />
 
     <uses-feature android:name="android.hardware.camera" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -17,12 +17,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Scanocular"
         tools:targetApi="31">
-
+        <activity
+            android:name=".activity.register.RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.main.MainActivity"
+            android:exported="false" />
         <activity
             android:name=".activity.scan.ScanActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.main.MainActivity"
+            android:name=".activity.login.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
